stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_define_trait_duplicate_method.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "d87dce24182643eb929cf82a62da28e70d987832f89614fb054784115ac187ec",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: def-trait-dup-method-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 163,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 12905,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 163,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 12905,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "a4275f650a1ec5a86c3a4cd525808b3cabe33b84ae575211b4859ea8c3b23b68",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: def-trait-dup-method-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: duplicate method name \'foo\' in trait definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 21,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4094,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 21,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4094,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "65d3ae524622816430f5acbcc36a409c1fb558cb4feac08e79c9bb07cd841ffd",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: def-trait-dup-method-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: duplicate method name \'foo\' in trait definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 21,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4094,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 21,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4094,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "fa1b6e29f1438950d1d2fe9b8beeb2db0d432ecb2c52f716295e2c9e62693579",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: def-trait-dup-method-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "None [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: true,
          data: Bool(true),
        )),
        cost: ExecutionCost(
          write_length: 163,
          write_count: 2,
          read_length: 1,
          read_count: 1,
          runtime: 12905,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 163,
      write_count: 2,
      read_length: 1,
      read_count: 1,
      runtime: 12905,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "897f1bac786f2c7a40239c39231d9de6c3b1ff510e1fa8db8b482a12078826fc",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: def-trait-dup-method-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: duplicate method name \'foo\' in trait definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 21,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4094,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 21,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4094,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "9edda621a7d2e2d42cf0a44511fd995dfa12f0655760a0cc82fcc581fdcb775b",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: def-trait-dup-method-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: duplicate method name \'foo\' in trait definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 21,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4094,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 21,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4094,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "ec6988334ad97bd35d6bd03a4230048e44e93dcef5a9b6509be1de3146862e0c",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: def-trait-dup-method-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: duplicate method name \'foo\' in trait definition) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 21,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 4094,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 21,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 4094,
    ),
  )),
]
