stackslib/src/chainstate/tests/snapshots/blockstack_lib__chainstate__tests__consensus__static_check_error_empty_tuples_not_allowed.snap
---
source: stackslib/src/chainstate/tests/consensus.rs
expression: result
---
[
  Success(ExpectedBlockOutput(
    marf_hash: "fe1fc0ccea753cb5d6832df1b96e543c0091e8a5841b5d0adae911b7287cc6dc",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: empty-tuples-not-Epoch3_2-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: tuple types may not be empty) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2209,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2209,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "df4e32328b2636c3a338ce2d95bdc379ce9d33e55cd2d0b7bfaa11768f858ed6",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: empty-tuples-not-Epoch3_2-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: tuple types may not be empty) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2209,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2209,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "f512f4f6bb3d6dfa9211ce867e56e7cc5900405fc094652b12504f0f809e5fd1",
    evaluated_epoch: Epoch32,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: empty-tuples-not-Epoch3_2-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: tuple types may not be empty) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2209,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2209,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "df7fe265493d65b06b3840d6d0d8389f141a4d1ee6ae8d734064999f27d46e77",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: empty-tuples-not-Epoch3_3-Clarity1, code_body: [..], clarity_version: Some(Clarity1))",
        vm_error: "Some(:0:0: tuple types may not be empty) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2209,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2209,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "4306e0961c90a5d877468300ff3fcd38f198d8ab41e31b28b52fc64203489a39",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: empty-tuples-not-Epoch3_3-Clarity2, code_body: [..], clarity_version: Some(Clarity2))",
        vm_error: "Some(:0:0: tuple types may not be empty) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2209,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2209,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "7073805e5313c96afc4b29fa9ae910fbd29f346748f985ea7eb4f50ed3a72080",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: empty-tuples-not-Epoch3_3-Clarity3, code_body: [..], clarity_version: Some(Clarity3))",
        vm_error: "Some(:0:0: tuple types may not be empty) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2209,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2209,
    ),
  )),
  Success(ExpectedBlockOutput(
    marf_hash: "6032e56b4fddbb4d620cdbba0eae89b181ff3e5e3e97730d7822f6ea5674b1b6",
    evaluated_epoch: Epoch33,
    transactions: [
      ExpectedTransactionOutput(
        tx: "SmartContract(name: empty-tuples-not-Epoch3_3-Clarity4, code_body: [..], clarity_version: Some(Clarity4))",
        vm_error: "Some(:0:0: tuple types may not be empty) [NON-CONSENSUS BREAKING]",
        return_type: Response(ResponseData(
          committed: false,
          data: Optional(OptionalData(
            data: None,
          )),
        )),
        cost: ExecutionCost(
          write_length: 10,
          write_count: 1,
          read_length: 1,
          read_count: 1,
          runtime: 2209,
        ),
      ),
    ],
    total_block_cost: ExecutionCost(
      write_length: 10,
      write_count: 1,
      read_length: 1,
      read_count: 1,
      runtime: 2209,
    ),
  )),
]
